[metadata]
name = python-cloudlandclient
summary = Cloudland Client Library
description-file =
    README.rst
author = 
author-email = openstack-dev@lists.openstack.org
classifier =
    Environment :: Cloudland
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    cloudlandclient

[entry_points]
console_scripts =
    cloudland = cloudlandclient.shell:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

